# LoRaWAN-based-Data-Collector

./: .cproject.bak  .gitignore  .gitmodule  .mxproject  .project.bak  CMakeLists.txt  README.md  stm32f401-lorawan-node.ioc
cmake/stm32cubemx/: CMakeLists.txt
lib/: CMakeLists.txt
src/Board/Inc/: board-config.h  dht.h  lorawan.h  watchdog.h
src/Board/Src/: adc-board.c  board.c  delay-board.c  dht.c  eeprom-board.c  gpio-board.c  lorawan.c  lpm-board.c  rtc-board.c  spi-board.c  sx1262-board.c  watchdog.c
src/Core/Inc/: config.h  stm32f4xx_hal_conf.h
src/Core/Src/: main.c  stm32f4xx_it.c
src/Sensors/Inc/: dht.h  temt.h
src/Sensors/Src/: dht.c  temt.c
